# core-engine

./: .devcontainer.json  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/: .env  Dockerfile  README.md  alembic.ini  development.Dockerfile  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 26299cf5a3b2_add_an_aoptional_error_message_field_to_.py  340a458f0983_add_new_state_to_enum.py  7d407e1b20b8_add_test_migration_table.py  904327f640c7_initial_schema.py  a1b2c3d4e5f6_add_pipeline_step_provenance.py  b2c3d4e5f6a7_add_task_pipeline_step_link.py  e25bf7f9506d_add_latest_ping_column_to_services.py
backend/kubernetes/: backend.config-map.yml  backend.ingress.yml  backend.service.yml  backend.stateful.yml  core-engine-backend.config-map.yml  core-engine-backend.ingress.yml  core-engine-backend.service.yml  core-engine-backend.stateful.yml  glitchtip.ingress.yml  glitchtip.service.yml  minio.ingress.yml  minio.service.yml  postgres.service.yml  postgres.stateful.yml
backend/src/: config.py  database.py  main.py
backend/src/common/: functions.py  models.py  query_parameters.py
backend/src/connection_manager/: connection_manager.py  models.py
backend/src/execution_units/: enums.py  models.py  service.py
backend/src/pipeline_executions/: controller.py  models.py  service.py
backend/src/pipeline_steps/: controller.py  models.py
backend/src/pipelines/: controller.py  models.py  service.py
backend/src/services/: controller.py  models.py  service.py
backend/src/stats/: models.py  service.py
backend/src/tasks/: controller.py  models.py  service.py
backend/tests/: test_config.py  test_database.py  test_default_route.py  test_pipeline_executions_service.py  test_pipeline_step_routing.py  test_pipelines.py  test_services.py  test_services_service.py  test_stats.py  test_storage.py  test_tasks.py
common-code/: .gitignore  MANIFEST.in  pyproject.toml
common-code/common_code/: config.py
common-code/common_code/common/: enums.py  models.py
common-code/common_code/logger/: log_config.yaml  logger.py
common-code/common_code/service/: enums.py  models.py  service.py
common-code/common_code/storage/: service.py
common-code/common_code/tasks/: controller.py  enums.py  models.py  service.py
common-code/common_code/tests/: test_service.py
common-code/src/common-code/: config.py
docs/: index.md  (+3 more)
engine/: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO  docker-compose.yml  dockerfile  engine.gitlab-ci.yml  faceblur.json  main.py  pyproject.toml  requirements-all.txt  requirements.txt  test.txt
engine/api/: api.py  example.yaml  interface.py
engine/api/Engine/: Engine.py  Enums.py  Errors.py  Pipeline.py  Registry.py
engine/kubernetes/: deployment.yml  engine.config-map.yml  engine.deployment.yml  engine.ingress.yml  engine.pod.yml  engine.service.yml  engine.stateful.yml  ingress.yml  minio.config-map.yml  minio.ingress.yml  minio.pod.yml  minio.pvc.yml  minio.service.yml  minio.stateful.yml  mongo.config-map.yml  mongo.pod.yml  mongo.pvc.yml  mongo.service.yml  mongo.stateful.yml  postgres.config-map.yml  postgres.pvc.yml  service.yml
engine/pipelines/: blur-18.json  blur-women.json  convertjpg.json  face-thumbs.json  faceblur.json  people-description.json
engine/src/: .coveragerc  config.py  connection_manager.py  database.py  http_client.py  logger.py  main.py  sql_app.db  storage.py  test_base.py  test_services.py  timer.py
engine/src/common/: exception.py  exceptions.py  models.py  query_parameters.py
engine/src/connection_manager/: connection_manager.py  models.py
engine/src/execution_units/: enums.py  models.py  service.py
engine/src/pipeline_elements/: controller.py  enums.py  models.py  service.py
engine/src/pipeline_executions/: controller.py  enums.py  models.py  service.py
engine/src/pipeline_steps/: controller.py  models.py  service.py
engine/src/pipelines/: controller.py  enums.py  models.py  pipeline_conditions.py  service.py
engine/src/services/: controller.py  enums.py  models.py  service.py
engine/src/stats/: controller.py  models.py  service.py
engine/src/storage/: controller.py  models.py  service.py
engine/src/tasks/: controller.py  enums.py  models.py  service.py  tasks_test.py
engine/src/tests/: implementation_test_mapper.py  implementation_test_pipeline_conditions.py  implementation_test_pipeline_consistency_check.py  test_base.py  test_default_route.py  test_logger.py  test_pipelines.py  test_services.py  test_stats.py  test_storage.py  test_tasks.py  test_timer.py
engine/tests/: conftest.py  dummypipeline1.json  dummypipeline2.json  dummyservice1.json  implementation_test_base_registry.py  implementation_test_pipeline_consistency_check.py  test.json  test_database.py  test_interface.py  test_pipeline_executions_service.py  test_services.py  test_services_service.py  test_storage.py  test_storage_controller.py  test_storage_service.py  test_timer.py
services/ae-ano-detection/model_creation/: pyproject.toml
services/ae-ano-detection/model_serving/: .env  .gitignore  Dockerfile  pyproject.toml
services/average-shade/: .env  Dockerfile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
services/average-shade/kubernetes/: average-shade.config-map.yml  average-shade.ingress.yml  average-shade.stateful.yml
services/average-shade/src/: main.py
services/face-analyzer/: .env  Dockerfile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
services/face-detection/: .env  README.md  pyproject.toml  requirements-all.txt  requirements.txt
services/image-blur/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
services/image-convert/: .env  Dockerfile  README.md  pyproject.toml
services/image-crop/: .env  README.md  pyproject.toml  requirements-all.txt  requirements.txt
services/image-sam/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
(+848 files in other folders)
