[project]
name = "csia-pme"

#[tool.poetry]
#name = "csia-pme"
#version = "0.1.0"
#description = "The main repository for the CSIA-PME project"
#authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
#readme = "README.md"
#
#[tool.poetry.dependencies]
#python = "~3.10,<3.12"
#
#[tool.poetry.group.docs.dependencies]
#cairosvg = "2.7.0"
#mkdocs-git-revision-date-localized-plugin = "1.2.0"
#mkdocs-glightbox = "0.3.2"
#mkdocs-material = "9.1.6"
#mkdocs-minify-plugin = "0.6.4"
#pillow = "9.5.0"
