[tool.poetry]
name = "swiss-ai-center"
version = "0.1.0"
description = "The main repository for the Swiss AI Center project"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

# [tool.poetry.group.dev.dependencies]

[tool.poetry.group.docs.dependencies]
cairosvg = "2.7.0"
mkdocs-git-revision-date-localized-plugin = "1.2.0"
mkdocs-glightbox = "0.3.2"
mkdocs-material = "9.1.6"
mkdocs-minify-plugin = "0.6.4"
pillow = "9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
