[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "aiobotocore>=2.3.1,<3.0.0",
    "alembic~=1.14",
    "fastapi~=0.135.1",
    "httpx~=0.28.1",
    "makefun~=1.16.0",
    "pg8000~=1.31.5",
    "psycopg2-binary~=2.9.11",
    "pydantic_settings>=2.13.1,<3.0.0",
    "python-multipart~=0.0.22",
    "requests~=2.32.3",
    "sentry-sdk[fastapi]~=1.42.0",
    "sqlmodel~=0.0.37",
    "uvicorn~=0.41.0",
    "websockets~=16.0",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "coverage~=7.8.0",
    "docker~=7.1.0",
    "flake8~=7.2.0",
    "pytest~=8.1.1",
    "pytest-asyncio~=0.23.5.post1",
    "pytest-cov~=4.1.0",
    "pytest_httpserver~=1.0.10",
    "testcontainers-core~=0.0.1rc1",
    "testcontainers-minio~=0.0.1rc1",
    "testcontainers-postgres~=0.0.1rc1",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
