[project]
# https://packaging.python.org/specifications/core-metadata/#name
name = "common_code"

# https://packaging.python.org/guides/single-sourcing-package-version/
version = "0.0.8"

# https://packaging.python.org/specifications/core-metadata/#summary
description = "Common code used by the CSIA-PME services"

# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.10"

# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = {text = "AGPL-3.0"}

authors = [
  {name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  {name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" }
]

maintainers = [
  {name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  {name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" }
]

# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "aiobotocore==2.4.1",
  "aiofiles==22.1.0",
  "email-validator==1.3.0",
  "fastapi==0.87.0",
  "flake8==5.0.4",
  "httpx==0.23.1",
  "python-dotenv==0.21.0",
  "PyYAML==6.0",
  "uvicorn==0.19.0"
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install common-code[test]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
test = [
  "pytest==7.2.0",
  "pytest-asyncio==0.20.3",
  "pytest-cov==4.0.0",
  "pytest-httpserver==1.0.6"
]

# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
[project.urls]  # Optional
"Homepage" = "https://csia-pme.github.io/csia-pme/"
"Bug Reports" = "https://github.com/csia-pme/csia-pme/issues"
"Demo" = "https://swiss-ai-center.ch/engine"
"Source" = "https://github.com/csia-pme/csia-pme"

[build-system]
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
