[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "common-code"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
readme = "README.md"
packages = [{include = "common_code"}]

[tool.poetry.dependencies]
python = "~3.10,<3.12"
aiobotocore = "2.4.1"
aiofiles = "22.1.0"
email-validator = "1.3.0"
fastapi = "0.87.0"
flake8 = "5.0.4"
httpx = "0.23.1"
python-dotenv = "0.21.0"
pyyaml = "6.0"
uvicorn = "0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
pytest-httpserver = "1.0.6"
