[project]
name = "common_code"
version = "1.0.0"
description = "Common code used by the Swiss AI Center services"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
  {name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  {name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" }
]
maintainers = [
  {name = "Andrea Petrucci", email = "andrea.petrucci@hefr.ch" },
  {name = "Ludovic Delafontaine", email = "ludovic.delafontaine@heig-vd.ch" }
]

# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "aiobotocore==2.4.1",
  "aiofiles==22.1.0",
  "email-validator==1.3.0",
  "fastapi==0.87.0",
  "flake8==5.0.4",
  "httpx==0.23.1",
  "python-dotenv==0.21.0",
  "PyYAML==6.0",
  "uvicorn==0.19.0"
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install common-code[test]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies]
test = [
  "pytest==7.2.0",
  "pytest-asyncio==0.20.3",
  "pytest-cov==4.0.0",
  "pytest-httpserver==1.0.6"
]

[project.urls]
"Homepage" = "https://swiss-ai-center.github.io/core-engine/"
"Bug Reports" = "https://github.com/swiss-ai-center/core-engine/issues"
"Demo" = "https://webapp-swiss-ai-center.kube.isc.heia-fr.ch"
"Source" = "https://github.com/swiss-ai-center/core-engine"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
