[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10,<3.12"
common-code = {git = "https://github.com/csia-pme/csia-pme.git", rev = "95-move-python-dependencies-from-pip-to-poetry", subdirectory = "common-code", extras = ["test"]}
makefun = "^1.15.1"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
testcontainers-core = "^0.0.1rc1"
testcontainers-minio = "^0.0.1rc1"
testcontainers-postgres = "^0.0.1rc1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
pytest-httpserver = "1.0.6"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
