[project]
name = "face-analyzer"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"

[tool.poetry]
name = "face-analyzer"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10,<3.12"
common-code = {git = "https://github.com/csia-pme/csia-pme.git", rev = "main", subdirectory = "common-code", extras = ["test"]}
numpy = "1.24.2"
h5py = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
aiofile = "^3.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
