[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10,<3.12"
common-code = {git = "https://github.com/csia-pme/csia-pme.git", rev = "95-move-python-dependencies-from-pip-to-poetry", subdirectory = "common-code", extras = ["test"]}
pillow = "^9.5.0"
scipy = "^1.10.1"
tensorflow = "^2.12.0"
retina-face = "^0.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
aiofile = "^3.8.7"
flake8 = "5.0.4"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
