#[project]
#name = "image-convert"
#
#[tool.pytest.ini_options]
#pythonpath = [".", "src"]
#addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
#
#[tool.poetry]
#name = "image-convert"
#version = "0.1.0"
#description = ""
#authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
#readme = "README.md"
#
#[tool.poetry.dependencies]
#python = "~3.10,<3.12"
#common-code = {git = "https://github.com/csia-pme/csia-pme.git", rev = "main", subdirectory = "common-code", extras = ["test"]}
#pillow = "^9.5.0"
#
#
#[tool.poetry.group.dev.dependencies]
#pytest = "7.2.0"
#pytest-asyncio = "0.20.3"
#aiofile = "^3.8.7"
#flake8 = "5.0.4"
#
#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
