[project]
name = "ae-ano-detection-model-creation"

[tool.poetry]
name = "ae-ano-detection-model-creation"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10,<3.12"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
dvc = "^3.1.0"
dvc-s3 = "^2.23.0"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
