[project]
name = "digit-recognition-model-creation"

[tool.poetry]
name = "digit-recognition-model-creation"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]

[tool.poetry.dependencies]
python = "~3.10,<3.12"
dvc = "^3.1.0"
dvc-s3 = "^2.23.0"
tensorflow = "^2.12.0"
pandas = "^2.0.2"
matplot = "^0.1.9"
pyyaml = "^6.0"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
