[project]
name = "digit-recognition-model-serving"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"

[tool.poetry]
name = "digit-recognition-model-serving"
version = "0.1.0"
description = ""
authors = ["CSIA-PME contibutors <ia.recherche@hes-so.ch>"]

[tool.poetry.dependencies]
python = "~3.10,<3.12"
common-code = {git = "https://github.com/csia-pme/csia-pme.git", rev = "main", subdirectory = "common-code", extras = ["test"]}
keras = "^2.12.0"
opencv-python = "^4.7.0.72"
tensorflow = "^2.12.0"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
